--- a/templates/notify-imagegrid.hbs
+++ b/templates/notify-imagegrid.hbs
@@ -14,7 +14,7 @@
 
                     {{#if _graphic.title}}
                     <div class="notify-imagegrid-item-title">
-                        <div class="notify-imagegrid-item-title-inner" tabindex="0">
+                        <div class="notify-imagegrid-item-title-inner" {{#if _graphic.gridmessage}} {{else}}tabindex="0"{{/if}}>
                             {{{_graphic.title}}}
                         </div>
                     </div>
