--- a/templates/notify-imagegrid.hbs
+++ b/templates/notify-imagegrid.hbs
@@ -26,7 +26,7 @@
                         <script>
                             $( 'img[src="{{_graphic.src}}"]' ).addClass('img2click');
                             $( 'img[src="{{_graphic.src}}"]' ).on( 'click', function() {
-                                var $gridmsg = "{{{_graphic.gridmessage}}}";
+                                var $gridmsg = '{{{_graphic.gridmessage}}}';
                                 require('coreJS/adapt').trigger('notify:popup',{title:'{{{_graphic.title}}}',body:$gridmsg });return false;
                             });
                         </script>
