Updated component to Framework Version 5

--- a/templates/notify-imagegrid.hbs
+++ b/templates/notify-imagegrid.hbs
@@ -1,15 +1,21 @@
-<div class="component-inner notify-imagegrid-inner" role="region" aria-label="{{_globals._components._notify-imagegrid.ariaRegion}}" {{#if _globals._components._notify-imagegrid.ariaRegion}}tabindex="0"{{/if}}>
+<div class="component__inner notify-imagegrid__inner" role="region" aria-label="{{_globals._components._notify-imagegrid.ariaRegion}}">
     {{> component this}}
-    <div class="component-widget notify-imagegrid-widget">
+    <div class="component__widget notify-imagegrid__widget">
 
         <div class="notify-imagegrid-grid">
             <div class="notify-imagegrid-grid-inner clearfix">
 
                 {{#each _items}}
-                <div class="notify-imagegrid-grid-item {{_itemClasses}}">
+                <div class="notify-imagegrid-grid-item {{_itemClasses}} griditem-{{@index}}">
                     <div class="{{../_id}}-fbnotify a11y-ignore" aria-hidden="true" tabindex="-1" style="display:none;">********** [ IMAGE GRID ITEM CONTENT ] **********</div>
                     <div class="base notify-imagegrid-item-image">
-                        <img src="{{_graphic.src}}" tabindex="0" alt="{{#if _graphic.alt}} {{_graphic.alt}} {{/if}}{{#if _isVisited}} {{../_globals._accessibility._ariaLabels.visited}}.{{/if}}" />
+                        {{#if _graphic.gridmessage}}
+                            <button tabindex="0" aria-label="{{_graphic.alt}}">
+                                <img src="{{_graphic.src}}" class="img2click a11y-ignore" aria-hidden="true" tabindex="-1">
+                            </button>
+                        {{else}}
+                            <img src="{{_graphic.src}}" tabindex="0" alt="{{#if _graphic.alt}} {{_graphic.alt}} {{/if}}{{#if _isVisited}} {{../_globals._accessibility._ariaLabels.visited}}.{{/if}}" />
+                        {{/if}}
                     </div>
 
                     <div class="notify-imagegrid-item-title">
@@ -19,11 +25,17 @@
                     </div>
 
                     {{#if _graphic.gridmessage}}
-                    
                         <div class="howmanygrid" style="display:none"></div>
-                        <script>
-                            $( 'img[src="{{_graphic.src}}"]' ).addClass('img2click');
-                            $( 'img[src="{{_graphic.src}}"]' ).on( 'click', function() {
+                        <script class="{{../_id}}-fbnotify">
+                             var count{{../_id}} = 0;
+                            $(".{{../_id}} .griditem-{{@index}} button").click(function() {
+                                if ($(this).hasClass("click4count")) {
+                                    //DO NOT COUNT
+                                }else{
+                                    count{{../_id}}++;
+                                    $(".{{../_id}} .totalgrid").html(""+count{{../_id}});
+                                    $(this).addClass("click4count");
+                                }
                                 var $gridmsg = '{{{_graphic.gridmessage}}}';
                                 require('coreJS/adapt').trigger('notify:popup',{title:'{{{_graphic.title}}}',body:$gridmsg });return false;
                             });
@@ -31,7 +43,6 @@
                         <div class="{{../_id}}-fbnotify a11y-ignore" aria-hidden="true" tabindex="-1" style="display:none;">[ Image Grid Notify Title ] = {{{_graphic.title}}}
                           <div class="{{../_id}}-fbnotify a11y-ignore" aria-hidden="true" tabindex="-1" style="display:none;">[ Image Grid Notify Body ] = {{{_graphic.gridmessage}}}</div>
                         </div>
-
                     {{/if}}
 
                 </div>
@@ -42,17 +53,10 @@
 
     </div>
     {{#if bottomText}}
-    <div class="accordion-bottom-text" tabindex="0">
+    <div class="imagegrid-bottom-text" tabindex="0">
         {{{bottomText}}}
     </div>
     {{/if}}
     <div class="totalgrid" style="display:none"></div>
-    <script>
-    var count{{_id}} = 0;
-    $(".{{_id}} .img2click").click(function() {
-        count{{_id}}++;
-        $(".{{_id}} .totalgrid").html(""+count{{_id}});
-    });
-    </script>
 </div>
 <script class="{{_id}}-fbnotify">if ( !$('html').hasClass('pagesave2txt') ) { $( ".{{_id}}-fbnotify" ).remove(); }</script>
