Removed role="region"

--- a/templates/notify-imagegrid.hbs
+++ b/templates/notify-imagegrid.hbs
@@ -1,4 +1,4 @@
-<div class="component__inner notify-imagegrid__inner" role="region" aria-label="{{_globals._components._notify-imagegrid.ariaRegion}}">
+<div class="component__inner notify-imagegrid__inner" aria-label="{{_globals._components._notify-imagegrid.ariaRegion}}">
     {{> component this}}
     <div class="component__widget notify-imagegrid__widget">
 
